# WZlearn

./: .gitignore  CMakeLists.txt  README.md
Bayes/: naive_bayes.cpp  naive_bayes.h  test.txt
LinearModel/: linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h
TreeModel/: base_tree.cpp  base_tree.h  decision_tree.cpp  decision_tree.h  decision_tree_regression.cpp  decision_tree_regression.h  random_forest.cpp  random_forest.h
base/: base.cpp  base.h
data/: data_loader.cpp  data_loader.h
test/: test.cpp
utils/: data_util.cpp  data_util.h  matrix_util.cpp  matrix_util.h
